This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Arraymodule initialization error handling improvements
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.9, Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, mpaolini, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2019-11-03 23:27 by mpaolini, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 17039 merged mpaolini, 2019-11-03 23:32
PR 17166 merged miss-islington, 2019-11-15 08:55
Messages (3)
msg355913 - (view) Author: Marco Paolini (mpaolini) * Date: 2019-11-03 23:27
Module two-phase initialization does not report errors correctly to the import machinery
msg356655 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-11-15 08:43
New changeset b44ffc8b409fd539c5fb2b79385498e9fe168880 by Serhiy Storchaka (Marco Paolini) in branch 'master':
bpo-38677: Fix arraymodule error handling in module initialization. (GH-17039)
https://github.com/python/cpython/commit/b44ffc8b409fd539c5fb2b79385498e9fe168880
msg356667 - (view) Author: miss-islington (miss-islington) Date: 2019-11-15 09:37
New changeset 25ce77dd2455abbb6e2c9e055bbc98954642fa7c by Miss Islington (bot) in branch '3.8':
bpo-38677: Fix arraymodule error handling in module initialization. (GH-17039)
https://github.com/python/cpython/commit/25ce77dd2455abbb6e2c9e055bbc98954642fa7c
History
Date User Action Args
2022-04-11 14:59:22adminsetgithub: 82858
2019-11-15 09:43:06serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2019-11-15 09:37:32miss-islingtonsetnosy: + miss-islington
messages: + msg356667
2019-11-15 08:55:45miss-islingtonsetpull_requests: + pull_request16675
2019-11-15 08:43:34serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg356655
2019-11-03 23:32:47mpaolinisetkeywords: + patch
stage: patch review
pull_requests: + pull_request16552
2019-11-03 23:27:02mpaolinicreate