bpo-38677: Fix arraymodule error handling in module initialization. (GH-17039)

(cherry picked from commit b44ffc8b409fd539c5fb2b79385498e9fe168880)

Co-authored-by: Marco Paolini <mpaolini@users.noreply.github.com>